syntax = "proto3";

package rivet.backend.pkg.faker.mm_lobby_row;

import "legacy/proto/common.proto";

message Request {
	rivet.common.Uuid lobby_id = 1;
	rivet.common.Uuid namespace_id = 6;
	rivet.common.Uuid lobby_group_id = 2;
	rivet.common.Uuid region_id = 3;
	rivet.common.Uuid run_id = 7;

	optional int64 create_ts = 4;
	optional int64 stop_ts = 5;
}

message Response {

}
